<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="wrap_content" android:orientation="vertical" android:layout_width="match_parent">

    <TextView
        android:id="@+id/title_paired_devices"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#000"
        android:paddingLeft="5dp"
        android:text="@string/lblAddressIp"
        android:textColor="#fff" />

        <EditText
            android:id="@+id/txt_ip"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:gravity="center_vertical|top"
            android:text="@string/ip"
            android:textSize="16sp" 
            android:hint="@null">

    </EditText>
    <Button
        android:id="@+id/btn_conn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnConn" >
    </Button>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/upateIp"
            android:layout_marginLeft="5dp"
            />

        <EditText
            android:id="@+id/et_ip1"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="192"
            android:inputType="number"
            android:layout_marginLeft="5dp"
            />

        <EditText
            android:id="@+id/et_ip2"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="168"
            android:inputType="number"
            android:layout_marginLeft="5dp"
            />
        <EditText
            android:id="@+id/et_ip3"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="1"
            android:inputType="number"
            android:layout_marginLeft="10dp"
            />
        <EditText
            android:id="@+id/et_ip4"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="100"
            android:inputType="number"
            android:layout_marginLeft="5dp"
            />

        <Button
            android:id="@+id/bt_ip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send"
            android:layout_marginLeft="10dp"
            />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/upateWg"
            android:layout_marginLeft="5dp"
            />

        <EditText
            android:id="@+id/et_wg1"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="192"
            android:inputType="number"
            android:layout_marginLeft="5dp"
            />
        <EditText
            android:id="@+id/et_wg2"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="168"
            android:inputType="number"
            android:layout_marginLeft="5dp"
            />
        <EditText
            android:id="@+id/et_wg3"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="1"
            android:inputType="number"
            android:layout_marginLeft="5dp"
            />
        <EditText
            android:id="@+id/et_wg4"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="1"
            android:inputType="number"
            android:layout_marginLeft="5dp"
            />

        <Button
            android:id="@+id/bt_wg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send"
            android:layout_marginLeft="10dp"
            />

    </LinearLayout>





    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/upateYm"
            android:layout_marginLeft="5dp"
            />

        <EditText
            android:id="@+id/et_ym1"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="255"
            android:inputType="number"
            android:layout_marginLeft="5dp"
            />
        <EditText
            android:id="@+id/et_ym2"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="255"
            android:inputType="number"
            android:layout_marginLeft="5dp"
            />
        <EditText
            android:id="@+id/et_ym3"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="255"
            android:inputType="number"
            android:layout_marginLeft="5dp"
            />
        <EditText
            android:id="@+id/et_ym4"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="0"
            android:inputType="number"
            android:layout_marginLeft="5dp"
            />

        <Button
            android:id="@+id/bt_ym"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send"
            android:layout_marginLeft="10dp"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/upateMac"
            android:layout_marginLeft="10dp"
            />

        <EditText
            android:id="@+id/et_mac1"
            android:layout_width="50dp"
            android:layout_height="40dp"
            android:text="02"
            android:clickable="false"
            android:layout_marginLeft="5dp"
            />
        <EditText
            android:id="@+id/et_mac2"
            android:layout_width="50dp"
            android:layout_height="40dp"
            android:text="15"
            android:layout_marginLeft="5dp"
            />
        <EditText
            android:id="@+id/et_mac3"
            android:layout_width="50dp"
            android:layout_height="40dp"
            android:text="AB"
            android:layout_marginLeft="10dp"
            />

        <EditText
            android:id="@+id/et_mac4"
            android:layout_width="50dp"
            android:layout_height="40dp"
            android:text="1B"
            android:layout_marginLeft="5dp"
            />

        <EditText
            android:id="@+id/et_mac5"
            android:layout_width="50dp"
            android:layout_height="40dp"
            android:text="1F"
            android:layout_marginLeft="5dp"
            />
        <EditText
            android:id="@+id/et_mac6"
            android:layout_width="50dp"
            android:layout_height="40dp"
            android:text="C1"
            android:layout_marginLeft="5dp"
            />
    </LinearLayout>

    
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    >



    <Button
        android:id="@+id/bt_mac"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/send"

        />


</LinearLayout>
    

    
    <Button
        android:id="@+id/btnClose"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/btnClose" />
    


</LinearLayout>
